# Pychame

./: .gitignore  LICENCE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
src/pychame/: __init__.py  video.py
src/pychame/keys/: cert.pem  key.pem
src/pychame/page/: index.html
