[project]
name = "pychame"
version = "1.0.0.beta"
authors = [
  { name="Lucas Barros", email="lucas.barros1804@gmail.com" },
]
description = "A simple way to use the Chromebook integred camera within OpenCV"
readme = "README.md"
requires-python = ">=3.7, <4"
classifiers = [
        'Development Status :: 3 - Alpha',
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
]

[project.urls]
"Homepage" = "https://github.com/LucasOliveiraaa/Pychame"
"Bug Tracker" = "https://github.com/LucasOliveiraaa/Pychame/issues"